[fix] * test z-index on safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@
 		user-select: none;
 		scroll-behavior: smooth !important;
 	}.z-10{
-		transform: translate3d(0, 0, 10px);
+		transform:  translate3d(0,0,0)
 	}
 }
 @layer utilities{
